Implement asset substitution with a different version, if found.
Prints warning to the log screen if substitution was made.